# thucydides

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  claude_context.sh  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7eb05f35b5b3_initial_migration_with_explicit_.py
backend/scripts/: ingest_gutenberg.py  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  auth.py  billing.py  dialogues.py  figures.py  schemas.py  users.py
backend/src/core/: settings.py
backend/src/db/: postgresql.py  qdrant.py
backend/src/db/models/: __init__.py
backend/src/services/: gemini.py  stripe.py
backend/src/utils/: __init__.py  security.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(pages)/(auth)/: layout.tsx
web/src/app/(pages)/(auth)/signin/: page.tsx
web/src/app/(pages)/(auth)/signup/: page.tsx
web/src/app/(pages)/(authed)/: layout.tsx
web/src/app/(pages)/(authed)/archive/: page.tsx
web/src/app/(pages)/(immersive)/: layout.tsx
web/src/app/(pages)/(info)/: layout.tsx
web/src/components/global/: animated-gradient-background.tsx  footer.tsx  logo.tsx  providers.tsx
web/src/components/local/: AddToArchiveDialog.tsx  CollaborativeSearch.tsx
web/src/hooks/: useAuthedSWR.ts  useStartDialogue.ts
web/src/lib/: actions.ts
web/src/types/: next-auth.d.ts
(+8 files in other folders)
